# Anonymizer

./: .gitignore  README.md  pyproject.toml  requirements.txt
anonymizer/: admin.py  apps.py  services.py  views.py
anonymizer/static/anonymizer/css/: home.css
anonymizer/static/anonymizer/js/: home.js
anonymizer/templates/: home.html  llms.txt  robots.txt  sitemap.xml
apps/anonymizer/: admin.py  apps.py  models.py  services.py  urls.py  views.py
apps/anonymizer/static/anonymizer/css/: home.css
apps/anonymizer/templates/: 429.html  api.html  home.html  llms.txt  robots.txt  sitemap.xml
core/: settings.py  settings_prod.py  urls.py
